main.css
body {
	overflow: hidden;
	font-family: "arial";
	text-align: center;
}

body h1 {
	color: #47311f;
}

#canvasDiv {
	position:relative;
	width: 80vw;
	min-width: 160px;
	height: 80vh;
	margin: auto;
	padding: 20px;
}

canvas {
	position: absolute;
	top: 20px;
	left: 20px;
}

input[type="color"] {
	padding: 0px;
	border: 0px;
	background-color: #23272a;
	max-height: 10vh;
	max-width: 15vw;
	width: 10vh;
	height: 15vw;
}

svg {
	max-height: 10vh;
	max-width: 12vw;
	width: 10vh;
	margin-left: 1vw;
	margin-right: 1vw;
}

#brushsvg.active {
	border-bottom: 1vh solid #7289DA;
	border-radius: 1vh;
}

#pencilsvg.active {
	border-top: 1vh solid #7289DA;
	border-radius: 1vh;
}

#arrowsvg, #xsvg {
	margin-left: 2vw;
}

#buttonDiv {
	width: 80vw;
	min-width: 350px;
	margin: auto;
	margin-top: 2vh;
}

#buttonDiv div.right {
	float: right;
}

#buttonDiv input, #buttonDiv svg{
	float: left;
}

.submitDiv .tooltiptext {
	opacity: 0;
	visibility: hidden;
	user-select: none;
	min-width: 10vw;
	width: 6vw;
	font-size: 3vh;
	background-color: #43b581;
	color: #fff;
	text-align: center;
	padding: 0.3vh 0;
	border-radius: 6px;
	font-weight: bold;

	/* Position the tooltip text - see examples below! */
	position: absolute;
	z-index: 1;
	top: -6vh;
	left: 18%;
	transition: opacity 0.5s linear;
}

.submitDiv {
	position: relative;
	display: inline-block;
}

.submitDiv .tooltiptext::after {
	content: " ";
	position: absolute;
	top: 98%; /* At the bottom of the tooltip */
	left: 50%;
	margin-left: -1vmin;
	border-width: 1vmin;
	border-style: solid;
	border-color: #43b581 transparent transparent transparent;
}

